tests/ui/invalid_macro_args.stderr
error: positional argument or varargs(*) not allowed after keyword arguments
 --> $DIR/invalid_macro_args.rs:3:21
  |
3 | #[pyfunction(a = 5, b)]
  |                     ^

error: keyword argument or kwargs(**) is not allowed after kwargs(**)
 --> $DIR/invalid_macro_args.rs:8:29
  |
8 | #[pyfunction(kwargs = "**", a = 5)]
  |                             ^
